worked on the links

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="header-container">
             <a href="#" class="logo">ShopHub</a>
             <nav>
-                <a href="#index.html">Home</a>
-                <a href="#products.html">Products</a>
-                <a href="#about.html ">About</a>
-                <a href="#contact.html">Contact</a>
-                <a href="#services.html">Services</a>
+                <a href="index.html">Home</a>
+                <a href="products.html">Products</a>
+                <a href="about.html ">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="services.html">Services</a>
             </nav>
             <div style="display: flex; align-items: center; gap: 1rem;">
                 <div class="search-container">
